# cool-game

./: .gitmodules  CMakeLists.txt  README.md
src/: game.cpp  game.hpp  levels.hpp  platform.hpp  puzzle.cpp  puzzle.hpp  sounds.hpp  symbol.cpp  symbol.hpp
src/arduino/: main.cpp  pins.hpp  platform.cpp
src/pc/: main.cpp  platform.cpp
